tests/paczka1/fuzzy1/69781039.err
Error in line 1: A751 A143 0,8
Error in line 11: 1J0n3LJNRQB A143 33,0
Error in line 2: A751 S187 79,2
Error in line 29: EoFnLwZlV A961 41,1
Error in line 32: ZHYtQu9T1P A143 35,97
